# V1

./: .gitattributes  .gitignore  .txt  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Kietiakai.txt  README.md  V1.sln  Vargsiukai.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  kursiokai.txt  strategy1_deque.vcxproj  strategy1_deque.vcxproj.filters  strategy1_list.vcxproj  strategy1_list.vcxproj.filters  strategy1_vector.vcxproj  strategy1_vector.vcxproj.filters  strategy2_deque.vcxproj  strategy2_deque.vcxproj.filters  strategy2_list.vcxproj  strategy2_list.vcxproj.filters  strategy2_vector.vcxproj  strategy2_vector.vcxproj.filters  strategy3_deque.vcxproj  strategy3_deque.vcxproj.filters  strategy3_list.vcxproj  strategy3_list.vcxproj.filters  strategy3_vector.vcxproj  strategy3_vector.vcxproj.filters  studentai.cpp  studentai.h  studentai10.txt  studentai1000.txt  studentai10000.txt  studentai20.txt  studentai30.txt  (+7 more)
1 STRATEGIJA/Deque/: studentai.cpp  studentai.h  testavimas.cpp
1 STRATEGIJA/List/: studentai.cpp  testavimas.cpp
1 STRATEGIJA/Vectors/: testavimas.cpp  testavimas.vcxproj.filters
1STRATEGIJA/Vectors/: studentai.cpp  testavimas.cpp
2 STRATEGIJA/Deque/: studentai.cpp  testavimas.cpp
2 STRATEGIJA/List/: studentai.cpp  studentai.h
2 STRATEGIJA/Vectors/: studentai.cpp  testavimas.cpp
2STRATEGIJA/Deque/: studentai.h  testavimas.aps  testavimas.cpp
2STRATEGIJA/List/: testavimas.cpp
2STRATEGIJA/Vectors/: studentai.h
3 STRATEGIJA/Deque/: resource.h  studentai.cpp
3 STRATEGIJA/Vectors/: studentai.cpp  testavimas.cpp
3STRATEGIJA/List/: studentai.cpp  testavimas.vcxproj
3STRATEGIJA/Vectors/: studentai10000.txt
Deque/: studentai.cpp  testavimas.cpp  testavimas.sln
List/: studentai.cpp  studentai.h  testavimas.cpp  testavimas.rc
Vectors/: studentai.cpp  studentai.h  studentai10000.txt  testavimas.cpp
strategy1_vector.dir/Debug/: strategy1_vector.exe.recipe  strategy1_vector.ilk
(+247 files in other folders)
